--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linkly - URL Shortener</title>
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
@@ -26,15 +24,22 @@
                         <sup class="r-icon">®</sup>
                     </h1>
                 </div>
-                <div class="user-btns">
-                    <button class="btn-login" id="login">
-                        <span class="login-text">Login</span> 
-                        <i class="fas fa-sign-in-alt login-icon"></i>
-                    </button>
-                    <button class="btn-register" id="register"> 
-                        <span class="register-text">Register Now</span> 
-                    </button>
-                </div>
+
+
+                    <div class="user-btns">
+                        <button class="btn-login" id="login">
+                            <span class="login-text">Login</span>
+                            <i class="fas fa-sign-in-alt login-icon"></i>
+                        </button>
+                        <button class="btn-register" id="register"> 
+                            <span class="register-text">Register</span>
+                        </button>
+                    </div>
+    
+
+                    
+
+
             </nav>
         </header>
     
@@ -44,14 +49,14 @@
             <div class="containerbody">
                 <h1 class="text-center">Shorten Your Loooong Links :)</h1>
                 <div class="center-container">
-                    <p class="p-text">Linkly is an efficient and easy-to-use URL shortening service that streamlines your online experience</p>
+                    <p class="p-text">Linkly is an efficient and easy-to-use URL shortening service that streamlines your online experience.</p>
                 </div>
                 <main class="main2">
                     <div class="input-wrapper">
                         <div class="input-container">
                             <span class="icon">🔗</span>
                             <input type="text" class="url-input" id="input_url" placeholder="Enter the link here">
-                            <button class="shorten-btn" id="submit_btn" >Shorten!</button>
+                            <button class="shorten-btn" id="submit_btn">Shorten!</button>
                         </div>
                     </div>
 
@@ -90,8 +95,8 @@
         </section>
     <!------------------------------------------------------------------------------------------------------------------>
         <section>
-            <div class="container ">
-                <table id="myTable" class="table hover" style="color: #0D1117;">
+            <div class="container">
+                <table id="myTable" class="table hover">
                     <thead>
                         <tr>
                             <th>Short Link</th>
@@ -117,10 +122,10 @@
                                     https://www.youtube.com
                                 </h6>
                             </td>
-                            <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT76W5Cm7CAO6_wSXxRNZsMHY4i6vkDHAIhq1D_DYvmDAzUjmth2AdwS6-IkBzDJzLg4BY&usqp=CAU" alt="QR Code" width="30"></td>
-                            <td>4313</td>
+                            <td><img src="../static/images/image 4.svg" width="45" height="45" alt="QR Code"></td>
+                            <td>809</td>
                             <td><span style="color: green; font-weight: bold;">Active <i class="fas fa-link"></i></span></td>
-                            <td>Feb 10 2021</td>
+                            <td>Feb 19 2024</td>
                         </tr>
                         <tr>
                             <td>
@@ -135,10 +140,10 @@
                                     https://www.telegram.com
                                 </h6>
                             </td>
-                            <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT76W5Cm7CAO6_wSXxRNZsMHY4i6vkDHAIhq1D_DYvmDAzUjmth2AdwS6-IkBzDJzLg4BY&usqp=CAU" alt="QR Code" width="30"></td>
-                            <td>4313</td>
-                            <td><span style="color: green; font-weight: bold;">Active <i class="fas fa-link"></i></span></td>
-                            <td>Feb 10 2021</td>
+                            <td><img src="../static/images/image 4.svg" width="45" height="45" alt="QR Code"></td>
+                            <td>2313</td>
+                            <td><span style="color: rgba(250, 205, 4, 0.911); font-weight: bold;">Inactive <i class="fas fa-link"></i></span></td>
+                            <td>Feb 10 2024</td>
                         </tr>
                         <tr>
                             <td>
@@ -153,10 +158,10 @@
                                     https://www.twitter.com
                                 </h6>
                             </td>
-                            <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT76W5Cm7CAO6_wSXxRNZsMHY4i6vkDHAIhq1D_DYvmDAzUjmth2AdwS6-IkBzDJzLg4BY&usqp=CAU" alt="QR Code" width="30"></td>
-                            <td>4313</td>
+                            <td><img src="../static/images/image 4.svg" width="45" height="45" alt="QR Code"></td>
+                            <td>1113</td>
                             <td><span style="color: green; font-weight: bold;">Active <i class="fas fa-link"></i></span></td>
-                            <td>Feb 10 2021</td>
+                            <td>Feb 05 2024</td>
                         </tr>
                         <tr>
                             <td>
@@ -171,10 +176,10 @@
                                     https://www.github.com
                                 </h6>
                             </td>
-                            <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT76W5Cm7CAO6_wSXxRNZsMHY4i6vkDHAIhq1D_DYvmDAzUjmth2AdwS6-IkBzDJzLg4BY&usqp=CAU" alt="QR Code" width="30"></td>
-                            <td>4313</td>
+                            <td><img src="../static/images/image 4.svg" width="45" height="45" alt="QR Code"></td>
+                            <td>8002</td>
                             <td><span style="color: green; font-weight: bold;">Active <i class="fas fa-link"></i></span></td>
-                            <td>Feb 10 2021</td>
+                            <td>Feb 02 2024</td>
                         </tr>
                         <tr>
                             <td>
@@ -189,10 +194,10 @@
                                     https://www.linkedin.com
                                 </h6>
                             </td>
-                            <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT76W5Cm7CAO6_wSXxRNZsMHY4i6vkDHAIhq1D_DYvmDAzUjmth2AdwS6-IkBzDJzLg4BY&usqp=CAU" alt="QR Code" width="30"></td>
-                            <td>4313</td>
+                            <td><img src="../static/images/image 4.svg" width="45" height="45" alt="QR Code"></td>
+                            <td>1108</td>
                             <td><span style="color: green; font-weight: bold;">Active <i class="fas fa-link"></i></span></td>
-                            <td>Feb 10 2021</td>
+                            <td>Sep 26 2024</td>
                         </tr>
                         <tr>
                             <td>
@@ -207,19 +212,27 @@
                                     https://www.instagram.com
                                 </h6>
                             </td>
-                            <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT76W5Cm7CAO6_wSXxRNZsMHY4i6vkDHAIhq1D_DYvmDAzUjmth2AdwS6-IkBzDJzLg4BY&usqp=CAU" alt="QR Code" width="30"></td>
-                            <td>4313</td>
+                            <td><img src="../static/images/image 4.svg" width="45" height="45" alt="QR Code"></td>
+                            <td>1906</td>
                             <td><span style="color: green; font-weight: bold;">Active <i class="fas fa-link"></i></span></td>
-                            <td>Feb 10 2021</td>
+                            <td>Sep 17 2024</td>
                         </tr>
+
 
                     </tbody>
 
+
                 </table>
+                <tfoot>
+                    <tr>
+                        <div class="btn_lastrow">    
+                            <a href="./register.html" id="btn_toggle">Register Now</a><span id="btn_toggl" >to enjoy Unlimited History</span>
+                       </div>
+                    </tr>
+
+                </tfoot>
                 
-               <div class="btn_lastrow">    
-                    <a href="./register.html" id="btn_toggle">Register Now</a><span id="btn_toggl" >to enjoy Unlimited History</span>
-               </div>
+
 
             </div>
         </section>
