--- a/templates/register.html
+++ b/templates/register.html
@@ -1,62 +1,47 @@
-<!DOCTYPE html>
+
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="../static/css/register.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <link rel="stylesheet" href="../static/css/register.css">
+
 </head>
 <body>
 
-<div class="container">
-    <h2>Register</h2>
-    <form id="registrationForm">
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
-            <div class="error-message" id="usernameError"></div>
-        </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-            <div class="error-message" id="emailError"></div>
-        </div>
+    <div class="register-container">
+        <h2 data-i18n="register_title">Register Account</h2>
+        <form>
+            <div class="input-group">
+                <input id="username" type="text" data-i18n="[placeholder]register_username" placeholder="Username" required>
+                <i class="fas fa-times clear-icon" id="clearRegisterUsername"></i>
+            </div>        
+            <input id="email" type="email" data-i18n="[placeholder]email_password" placeholder="Email" required>
+            <div class="input-group">
+                <input id="password" type="password" data-i18n="[placeholder]register_password" placeholder="Password" required>
+                <i class="fas fa-eye-slash toggle-password" id="togglePassword"></i>
+            </div>
+            <div class="input-group">
+                <input id="confirm_password" type="password" data-i18n="[placeholder]register_confirm_password" placeholder="Confirm Password" required>
+                <i class="fas fa-eye-slash toggle-password" id="toggleConfirmPassword"></i>
+            </div>        
+            <button id="register" type="submit">Register</button>
+            <div class="text-center mt-3">
+                <p data-i18n="register_register_link">Already have an account? <a href="./index.html" class="login-link">Login</a></p>
+            </div>
+        </form>
+    </div>
 
-        <!-- <div class="form-group">
-            <label for="first_name">First Name</label>
-            <input type="text" id="first_name" name="first_name" required>
-            <div class="error-message" id="firstNameError"></div>
-        </div>
-        <div class="form-group">
-            <label for="last_name">Last Name</label>
-            <input type="text" id="last_name" name="last_name" required>
-            <div class="error-message" id="lastNameError"></div>
-        </div> -->
-
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
-            <div class="error-message" id="passwordError"></div>
-        </div>
-        <div class="form-group">
-            <label for="confirm_password">Confirm Password</label>
-            <input type="password" id="confirm_password" name="confirm_password" required>
-            <div class="error-message" id="confirmPasswordError"></div>
-        </div>
-
-        <button id="registration" type="button">Register</button>
-
-        <div class="login-link">
-            Already have an account? <a href="./index.html">Log in</a>
-        </div>
-    </form>
-</div>
-
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
-<script src="../static/javascript/register.js"></script>
+    <!-- Load JavaScript at the end of body -->
+    <!-- Use HTTPS for jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../static/javascript/register.js"></script>
 
 </body>
 </html>
